# IMU_bno055_cpp

./: CMakeLists.txt  main.cpp
imuLib/: getbno055.c  i2c_bno055.c
imuLib/include/: getbno055.h
